echo/ingress-init-echo.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo-gebi-link
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - host: echo.gebi.link
    http:
      paths:
      - path: /
        backend:
          serviceName: echo
          servicePort: 80
